--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "zl-webpack",
-  "version": "1.0.0",
-  "description": "专栏《带你从零构建webpack知识体系》lesson代码",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wanganni1014/zl-webpack.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wanganni1014/zl-webpack/issues"
-  },
-  "homepage": "https://github.com/wanganni1014/zl-webpack#readme",
-  "devDependencies": {
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
-  }
+    "name": "zl-webpack",
+    "version": "1.0.0",
+    "description": "专栏《带你从零构建webpack知识体系》lesson代码",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --watch",
+        "dev": "webpack-dev-server --open"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/wanganni1014/zl-webpack.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/wanganni1014/zl-webpack/issues"
+    },
+    "homepage": "https://github.com/wanganni1014/zl-webpack#readme",
+    "devDependencies": {
+        "@babel/core": "^7.14.0",
+        "@babel/preset-env": "^7.14.1",
+        "@babel/preset-react": "^7.13.13",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.2.4",
+        "file-loader": "^6.2.0",
+        "less": "^4.1.1",
+        "less-loader": "^8.1.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "style-loader": "^2.0.0",
+        "webpack": "^5.37.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
