--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
         "@babel/preset-env": "^7.14.1",
         "@babel/preset-react": "^7.13.13",
         "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
         "css-loader": "^5.2.4",
         "file-loader": "^6.2.0",
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.1",
         "less": "^4.1.1",
         "less-loader": "^8.1.1",
+        "raw-loader": "^0.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "style-loader": "^2.0.0",
